add bullet charts (partial)
feat(sample): add bullet charts (partial)

add bullet charts (partial)

--- a/sample/src/sample-selector/selector.html
+++ b/sample/src/sample-selector/selector.html
@@ -1,6 +1,5 @@
  <template>
     <section>
-        <h3>About Aurelia-KendoUI Plugin (bridge)</h3>
 
       <div>
           <br>
@@ -35,6 +34,7 @@
                   <a href="#/bar-charts">Bar Charts</a>      <br>
                   <img src="images/green.png">
                   <a href="#/line-charts">Line Charts</a>           <br>
+                  <img src="images/orange.png">
                   <a href="#">Stock Charts</a>                      <br>
                   <a href="#/dropdownlist">DropDownList</a>         <br>
                   <a href="#">Window</a>                            <br>
@@ -75,24 +75,37 @@
                  <img src="images/green.png">
                  <a href="#/area-charts">Area Charts</a>            <br>
                  <img src="images/green.png">
-                 <a href="#/bar-charts">Bar Charts</a>                         <br>
+                 <a href="#/bar-charts">Bar Charts</a>              <br>
                  <img src="images/green.png">
                  <a href="#/box-plot-charts">Box Plot Charts</a>    <br>
-                 <a href="#">Bubble Charts</a>                      <br>
-                 <a href="#">Bullet Charts</a>                      <br>
-                 <a href="#">Donut Charts</a>                       <br>
-                 <a href="#">Funnel Charts</a>                      <br>
+                 <img src="images/green.png">
+                 <a href="#/bubble-charts">Bubble Charts</a>        <br>
+                 <img src="images/green.png">
+                 <a href="#bullet-charts">Bullet Charts</a>         <br>
+                 <img src="images/green.png">
+                 <a href="#donut-charts">Donut Charts</a>           <br>
+                 <img src="images/green.png">
+                 <a href="#funnel-charts">Funnel Charts</a>         <br>
                  <img src="images/green.png">
                  <a href="#/line-charts">Line Charts</a>            <br>
-                 <a href="#">Pie Charts</a>                         <br>
-                 <a href="#">Polar Charts</a>                       <br>
-                 <a href="#">Radar Charts</a>                       <br>
-                 <a href="#">Range Bar Charts</a>                   <br>
-                 <a href="#">Scatter Charts</a>                     <br>
-                 <a href="#">Sparklines</a>                         <br>
+                 <img src="images/green.png">
+                 <a href="#/pie-charts">Pie Charts</a>              <br>
+                 <img src="images/green.png">
+                 <a href="#/polar-charts">Polar Charts</a>          <br>
+                 <img src="images/green.png">
+                 <a href="#/radar-charts">Radar Charts</a>          <br>
+                 <img src="images/green.png">
+                 <a href="#/range-charts">Range Bar Charts</a>      <br>
+                 <img src="images/green.png">
+                 <a href="#/scatter-charts">Scatter Charts</a>      <br>
+                 <img src="images/green.png">
+                 <a href="#/sparkline">Sparklines</a>               <br>
+                 <img src="images/orange.png">
                  <a href="#">Stock Charts</a>                       <br>
+                 <img src="images/orange.png">
                  <a href="#">TreeMap</a>                            <br>
-                 <a href="#">Waterfall Charts</a>                   <br>
+                 <img src="images/green.png">
+                 <a href="#/waterfall-charts">Waterfall Charts</a>  <br>
                  <br>
                  GAUGES                                             <br>
                  <a href="#">Linear Gauge</a>                       <br>
