--- a/sample/src/charts/funnel-charts/binding-to-remote-data.html
+++ b/sample/src/charts/funnel-charts/binding-to-remote-data.html
@@ -1,5 +1,5 @@
 <template>
-  <au-kendo-chart title.bind="{text: ''}"
+  <au-kendo-chart title.bind="{text: 'Spain windpower electricity production (GWh)'}"
                   legend.bind="legend"
                   series-defaults.bind="seriesDefaults"
                   series.bind="series"
