--- a/sample/src/charts/pie-charts/basic-use.html
+++ b/sample/src/charts/pie-charts/basic-use.html
@@ -1,10 +1,11 @@
 <template>
-  <au-kendo-chart title.bind="{text: 'Gross Domestic product growth \n /GDP annual %/'}"
-                  legend.bind="{position: 'bottom'}"
-                  series-defaults.bind="seriesDefaults"
-                  series.bind="series"
-                  value-axis.bind="valueAxis"
-                  category-axis.bind="categoryAxis"
-                  tooltip.bind="tooltip">
+    <au-kendo-chart title.bind="{text: ''}"
+                      legend.bind="legend"
+                      series-defaults.bind="seriesDefaults"
+                      series.bind="series"
+                      value-axis.bind="valueAxis"
+                      category-axis.bind="categoryAxis"
+                      tooltip.bind="tooltip">
+      </au-kendo-chart>
   </au-kendo-chart>
 </template>
