--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -28,6 +28,10 @@
           <a route-href="route: sample-selector">Sample Selector</a>
         </li>
 
+        <li route-highlight="routes: style-selector">
+          <a route-href="route: style-selector">Style Selector</a>
+        </li>
+
         <li route-highlight="routes: autocomplete">
           <a route-href="route: autocomplete">Autocomplete</a>
         </li>
