--- a/sample/src/sample-selector/selector.html
+++ b/sample/src/sample-selector/selector.html
@@ -81,11 +81,11 @@
                  <img src="images/green.png">
                  <a href="#/bubble-charts">Bubble Charts</a>        <br>
                  <img src="images/green.png">
-                 <a href="#bullet-charts">Bullet Charts</a>         <br>
+                 <a href="#/bullet-charts">Bullet Charts</a>         <br>
                  <img src="images/green.png">
-                 <a href="#donut-charts">Donut Charts</a>           <br>
+                 <a href="#/donut-charts">Donut Charts</a>           <br>
                  <img src="images/green.png">
-                 <a href="#funnel-charts">Funnel Charts</a>         <br>
+                 <a href="#/funnel-charts">Funnel Charts</a>         <br>
                  <img src="images/green.png">
                  <a href="#/line-charts">Line Charts</a>            <br>
                  <img src="images/green.png">
