--- a/sample/src/charts/funnel-charts/basic-use.html
+++ b/sample/src/charts/funnel-charts/basic-use.html
@@ -1,10 +1,57 @@
 <template>
-  <au-kendo-chart title.bind="{text: ''}"
-                  legend.bind="legend"
-                  series-defaults.bind="seriesDefaults"
-                  series.bind="series"
-                  value-axis.bind="valueAxis"
-                  category-axis.bind="categoryAxis"
-                  tooltip.bind="tooltip">
-  </au-kendo-chart>
+    <div class="demo-section k-content wide">
+    <h4>Sales statistics</h4>
+    <div class="row">
+        <div class="col-xs-12 col-sm-4">
+            <au-kendo-chart title.bind="{text: ''}"
+                              legend.bind="legend"
+                              series-defaults.bind="seriesDefaults"
+                              series.bind="series"
+                              value-axis.bind="valueAxis"
+                              category-axis.bind="categoryAxis"
+                              tooltip.bind="tooltip">
+              </au-kendo-chart>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <au-kendo-chart title.bind="{text: ''}"
+                              legend.bind="legend"
+                              series-defaults.bind="seriesDefaults"
+                              series.bind="series"
+                              value-axis.bind="valueAxis"
+                              category-axis.bind="categoryAxis"
+                              tooltip.bind="tooltip">
+              </au-kendo-chart>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <au-kendo-chart title.bind="{text: ''}"
+                              legend.bind="legend"
+                              series-defaults.bind="seriesDefaults"
+                              series.bind="series"
+                              value-axis.bind="valueAxis"
+                              category-axis.bind="categoryAxis"
+                              tooltip.bind="tooltip">
+              </au-kendo-chart>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-4">
+            <h4><input type="checkbox" id="dynamicSlope"/> Dynamic Slope</h4>
+            <i>The slope for each segment depends on the ratio between the current and the next value</i>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <h4><input type="checkbox" id="dynamicHeight"/> Dynamic Height</h4>
+            <i>The height of the segment is the overall percentage for that dataItem</i>
+        </div>
+        <div class="col-xs-12 col-sm-4">
+            <h4>Neck Ratio</h4>
+            <ul class="options">
+                <li><input id="neckSlider" value="0.3"/></li>
+            </ul>
+            <i>The ratio between the bases of the whole funnel element</i>
+        </div>
+    </div>
+
+
+
 </template>
