--- a/sample/src/charts/pie-charts/binding-to-remote-data.html
+++ b/sample/src/charts/pie-charts/binding-to-remote-data.html
@@ -1,11 +1,10 @@
 <template>
-  <au-kendo-chart title.bind="{text: 'Spain electricity production (GWh)'}"
-                  data-source.bind="datasource"
-                  legend.bind="{position: 'top'}"
-                  series.bind="series"
-                  series-defaults.bind="{type: 'line'}"
-                  value-axis.bind="valueAxis"
-                  category-axis.bind="categoryAxis"
-                  tooltip.bind="tooltip">
-  </au-kendo-chart>
+    <au-kendo-chart title.bind="{text: ''}"
+                      legend.bind="legend"
+                      series-defaults.bind="seriesDefaults"
+                      series.bind="series"
+                      value-axis.bind="valueAxis"
+                      category-axis.bind="categoryAxis"
+                      tooltip.bind="tooltip">
+      </au-kendo-chart>
 </template>
