feat(charts): added treemap and stock

--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -60,6 +60,8 @@
             <li><a route-href="route: range-charts">Range charts</a></li>
             <li><a route-href="route: scatter-charts">Scatter charts</a></li>
             <li><a route-href="route: sparkline">Sparkline</a></li>
+            <li><a route-href="route: stock">Stock</a></li>
+            <li><a route-href="route: treemap">Treemap</a></li>
             <li><a route-href="route: waterfall-charts">Waterfall charts</a></li>
           </ul>
         </li>
