--- a/sample/src/nav-bar.html
+++ b/sample/src/nav-bar.html
@@ -1,4 +1,5 @@
 <template>
+  <require from="theme-selector/theme-selector"></require>
   <require from="./route-highlight"></require>
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="navbar-header">
@@ -28,8 +29,14 @@
           <a route-href="route: sample-selector">Sample Selector</a>
         </li>
 
-        <li route-highlight="routes: style-selector">
-          <a route-href="route: style-selector">Style Selector</a>
+        <li class="dropdown dropdown-large">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Theme <b class="caret"></b></a>
+
+          <ul class="dropdown-menu dropdown-menu-large row">
+            <li>
+              <theme-selector></theme-selector>
+            </li>
+          </ul>
         </li>
 
         <li route-highlight="routes: autocomplete">
