--- a/sample/src/charts/funnel-charts/binding-to-remote-data.html
+++ b/sample/src/charts/funnel-charts/binding-to-remote-data.html
@@ -1,6 +1,7 @@
 <template>
   <au-kendo-chart title.bind="{text: 'Spain windpower electricity production (GWh)'}"
                   legend.bind="legend"
+                  data-source.bind="datasource"
                   series-defaults.bind="seriesDefaults"
                   series.bind="series"
                   value-axis.bind="valueAxis"
