test version used for finding the data access failure

--- a/sample/src/charts/funnel-charts/basic-use.html
+++ b/sample/src/charts/funnel-charts/basic-use.html
@@ -7,7 +7,7 @@
                               data-source.bind="octData"
                               legend.bind="legend"
                               series-defaults.bind="seriesDefaults"
-                              series.bind="seriesOct"
+                              series.bind="series_oct"
                               tooltip.bind="tooltip">
               </au-kendo-chart>
         </div>
@@ -16,7 +16,7 @@
                               data-source.bind="novData"
                               legend.bind="legend"
                               series-defaults.bind="seriesDefaults"
-                              series.bind="seriesNov"
+                              series.bind="series_nov"
                               tooltip.bind="tooltip">
               </au-kendo-chart>
         </div>
@@ -25,7 +25,7 @@
                               data-source.bind="decData"
                               legend.bind="legend"
                               series-defaults.bind="seriesDefaults"
-                              series.bind="seriesDec"
+                              series.bind="series_dec"
                               tooltip.bind="tooltip">
               </au-kendo-chart>
         </div>
