--- a/sample/src/charts/pie-charts/binding-to-local-data.html
+++ b/sample/src/charts/pie-charts/binding-to-local-data.html
@@ -1,10 +1,9 @@
 <template>
-    <au-kendo-chart title.bind="{text: ''}"
+    <au-kendo-chart   title.bind="{text: 'Break-up of Spain Electricity Production for 2008'}"
+                      data-source.bind="dataSource"
                       legend.bind="legend"
-                      series-defaults.bind="seriesDefaults"
                       series.bind="series"
-                      value-axis.bind="valueAxis"
-                      category-axis.bind="categoryAxis"
+                      series-colors.bind="seriesColors"
                       tooltip.bind="tooltip">
       </au-kendo-chart>
   </au-kendo-chart>
