--- a/sample/src/charts/funnel-charts/funnel-labels.html
+++ b/sample/src/charts/funnel-charts/funnel-labels.html
@@ -1,5 +1,5 @@
 <template>
-  <au-kendo-chart title.bind="{text: ''}"
+  <au-kendo-chart title.bind="{text: 'The AIDA model'}"
                   legend.bind="legend"
                   series-defaults.bind="seriesDefaults"
                   series.bind="series"
