update the sample selector status

--- a/sample/src/sample-selector/selector.html
+++ b/sample/src/sample-selector/selector.html
@@ -5,7 +5,7 @@
           <br>
           <br>
 
-          <!-- Second tab page title - single column -->
+          <!-- page title - single column -->
           <div class="row">
               <div class="col-xs-12 col-sm-12">
                   <p>
@@ -22,7 +22,7 @@
               </div>
           </div>
 
-          <!-- Second tab page content - five columns -->
+          <!-- page content - five columns -->
           <div class="row">
               <div class="col-xs-12 col-sm-2">
                   MOST POPULAR                                      <br>
@@ -31,11 +31,11 @@
                   <a href="#">Editor</a>                            <br>
                   <a href="#">Scheduler</a>                         <br>
                   <img src="images/green.png">
-                  <a href="#/bar-charts">Bar Charts</a>      <br>
+                  <a href="#/bar-charts">Bar Charts</a>             <br>
                   <img src="images/green.png">
                   <a href="#/line-charts">Line Charts</a>           <br>
-                  <img src="images/orange.png">
-                  <a href="#">Stock Charts</a>                      <br>
+                  <img src="images/green.png">
+                  <a href="#/stock">Stock Charts</a>                <br>
                   <a href="#/dropdownlist">DropDownList</a>         <br>
                   <a href="#">Window</a>                            <br>
                   <a href="#">Upload</a>                            <br>
@@ -100,10 +100,10 @@
                  <a href="#/scatter-charts">Scatter Charts</a>      <br>
                  <img src="images/green.png">
                  <a href="#/sparkline">Sparklines</a>               <br>
-                 <img src="images/orange.png">
-                 <a href="#">Stock Charts</a>                       <br>
-                 <img src="images/orange.png">
-                 <a href="#">TreeMap</a>                            <br>
+                 <img src="images/green.png">
+                 <a href="#/stock">Stock Charts</a>                 <br>
+                 <img src="images/green.png">
+                 <a href="#/treemap">TreeMap</a>                            <br>
                  <img src="images/green.png">
                  <a href="#/waterfall-charts">Waterfall Charts</a>  <br>
                  <br>
