--- a/sample/src/charts/treemap/basic-use.html
+++ b/sample/src/charts/treemap/basic-use.html
@@ -8,18 +8,15 @@
           <h4>TreeMap rendering types</h4>
           <ul class="options">
               <li>
-                  <input id="typeSquarified" name="type"
-                              type="radio" value="squarified" checked="checked" autocomplete="off" />
+                  <input name="type" type="radio" value="squarified" checked.bind="type" />
                   <label for="typeSquarified">Squarified</label>
               </li>
               <li>
-                  <input id="typeVertical" name="type"
-                              type="radio" value="vertical" autocomplete="off" />
+                  <input name="type" type="radio" value="vertical" checked.bind="type" />
                   <label for="typeVertical">Vertical(Slice and Dice)</label>
               </li>
               <li>
-                  <input id="typeHorizontal" name="type"
-                              type="radio" value="horizontal" autocomplete="off" />
+                  <input name="type" type="radio" value="horizontal" checked.bind="type" />
                   <label for="typeHorizontal">Horizontal(Slice and Dice)</label>
               </li>
           </ul>
