fix(chart): allow style attribute
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/157
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/161

--- a/sample/src/charts/donut-charts/basic-use.html
+++ b/sample/src/charts/donut-charts/basic-use.html
@@ -3,6 +3,7 @@
                   chart-area.bind="chartArea"
                   series-defaults.bind="seriesDefaults"
                   series.bind="series"
-                  tooltip.bind="tooltip">
+                  tooltip.bind="tooltip"
+                  style="background: center no-repeat url('http://demos.telerik.com/kendo-ui/content/shared/styles/world-map.png');">
   </au-kendo-chart>
 </template>
