--- a/src/chart/chart.html
+++ b/src/chart/chart.html
@@ -1,5 +1,2 @@
-<template>
-  <div css="height: ${height};">
-    <div ref="target"></div>
-  </div>
+<template style="display: block;">
 </template>
