--- a/src/chart/treemap.html
+++ b/src/chart/treemap.html
@@ -1,4 +1,2 @@
-<template>
-  <!-- 600px should be dynamic -->
-  <div ref="target" style="height: 600px"></div>
+<template style="display: block;">
 </template>
