added some chart heights

--- a/sample/src/charts/bullet-charts/basic-use.html
+++ b/sample/src/charts/bullet-charts/basic-use.html
@@ -5,7 +5,7 @@
                 <td class="item">mmHg</td>
                 <td>
                   <au-kendo-chart
-                                  height.bind='120'
+                                  style="height: 65px"
                                   series.bind="series_mmHg"
                                   chart-area.bind="chartArea"
                                   category-axis.bind="categoryAxis_mmHg"
@@ -20,7 +20,7 @@
                 <td class="item">hPa</td>
                 <td>
                   <au-kendo-chart
-                                height.bind='120'
+                                style="height: 65px"
                                 series.bind="series_hPa"
                                 chart-area.bind="chartArea"
                                 category-axis.bind="categoryAxis_hPa"
@@ -35,7 +35,7 @@
                 <td class="item">hum</td>
                 <td>
                   <au-kendo-chart
-                                height.bind='120'
+                                style="height: 65px"
                                 series.bind="series_hum"
                                 chart-area.bind="chartArea"
                                 category-axis.bind="categoryAxis_hum"
@@ -50,7 +50,7 @@
                 <td class="item">temp</td>
                 <td>
                   <au-kendo-chart
-                                height.bind='120'
+                                style="height: 65px"
                                 series.bind="series_temp"
                                 chart-area.bind="chartArea"
                                 category-axis.bind="categoryAxis_temp"
