--- a/sample/src/charts/treemap/events.html
+++ b/sample/src/charts/treemap/events.html
@@ -1,5 +1,6 @@
 <template>
-  <au-kendo-treemap data-source.bind="dataSource"
+  <au-kendo-treemap style="height: 600px; font-size: 12px;"
+                    data-source.bind="dataSource"
                     value-field="value"
                     text-field="name"
                     kendo-data-bound.trigger="logger.log('Data bound')"
