feat(all): generate event proxies
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/172
fixes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/133

--- a/sample/src/autocomplete/customizing-templates.html
+++ b/sample/src/autocomplete/customizing-templates.html
@@ -1,4 +1,5 @@
 <template>
+  <require from="./customizing-templates.css"></require>
   <p><strong>Customers:</strong></p>
   <p>
       <input au-kendo-autocomplete="data-source.bind: datasource;
