--- a/sample/src/autocomplete/events.html
+++ b/sample/src/autocomplete/events.html
@@ -2,7 +2,7 @@
   <p><strong>Select a state in USA:</strong></p>
   <p>
       <input au-kendo-autocomplete="data-source.bind: items;"
-             kendo-open.trigger="logger.logger.log('open')"
+             kendo-open.trigger="logger.log('open')"
              kendo-close.trigger="logger.log('close')"
              kendo-change.trigger="logger.log('change')"
              kendo-select.trigger="logger.log('select')"
