--- a/sample/src/grid/basic-use.html
+++ b/sample/src/grid/basic-use.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./basic-use.css"></require>
 
-    <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
+    <au-kendo-grid data-source.bind="datasource" pageable.bind="pageable" sortable.bind="true">
       <au-col title="Contact Name" field="ContactName">
         <div class='customer-photo' style="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
         <div class='customer-name'>${ContactName}</div>
