feat(all): implement dropdownlist, progressbar, slider + samples

--- a/sample/src/sample-selector/selector.html
+++ b/sample/src/sample-selector/selector.html
@@ -56,14 +56,16 @@
                   <img src="images/green.png">
                   <a href="#/autocomplete">Autocomplete</a>         <br>
                   <a href="#">ColorPicker</a>                       <br>
-                  <a href="#combobox">Combobox</a>                  <br>
+                  <a href="#/combobox">Combobox</a>                  <br>
                   <a href="#">DatePicker</a>                        <br>
                   <a href="#">DateTimePicker</a>                    <br>
+                  <img src="images/green.png">
                   <a href="#/dropdownlist">DropDownList</a>         <br>
                   <a href="#">Editor</a>                            <br>
                   <a href="#">MaskedTextBox</a>                     <br>
                   <a href="#">MultiSelect</a>                       <br>
                   <a href="#">Numeric TextBox</a>                   <br>
+                  <img src="images/orange.png">
                   <a href="#">Slider</a>                            <br>
                   <a href="#">TimePicker</a>                        <br>
                   <a href="#">Upload</a>                            <br>
@@ -145,7 +147,15 @@
                  <a href="#/tabstrip">TabStrip</a>                  <br>
                  <a href="#/toolbar">ToolBar</a>                    <br>
                  <a href="#">TreeView</a>                           <br>
-             </div>
+                 <br>
+                 INTERACTIVITY &amp; UX                             <br>
+                 <a href="#">Drag &amp; Drop</a>                    <br>
+                 <a href="#">Effects</a>                            <br>
+                 <img src="images/green.png">
+                 <a href="#/progressbar">ProgressBar</a>            <br>
+                 <a href="#">Sortable</a>                           <br>
+                 <a href="#">Styling</a>                            <br>
+              </div>
           </div>
 
           <br>
