--- a/sample/src/dropdownlist/api.html
+++ b/sample/src/dropdownlist/api.html
@@ -1,2 +1,61 @@
 <template>
-</template>
+ <div id="example">
+            
+            <div class="demo-section k-content">
+                <h4>Select movie</h4>
+                <input au-kendo-drop-down-list="data-text-field: text;
+                                      			data-value-field: value;
+                                      			data-source.bind: data;
+                                      			height.bind: 100" au-kendo-drop-down-list.ref="movies"
+                                      			style="width: 100%;" />
+            </div>          
+            
+            <div class="box wide">
+                <div class="box-col">
+                <h4>API Functions</h4>
+                <ul class="options">
+                    <li>
+                        <button click.delegate="movies.widget.enable()" class="k-button">Enable</button> 
+                        <button click.delegate="movies.widget.enable(false)" class="k-button">Disable</button>
+                    </li>
+                    <li>
+                        <button click.delegate="movies.widget.readonly()" class="k-button">Readonly</button>
+                    </li>
+                    <li>
+                        <button click.delegate="movies.widget.open()" class="k-button">Open</button> 
+                        <button click.delegate="movies.widget.close()" class="k-button">Close</button>
+                    </li>
+                    <li>
+                        <button click.delegate="getValue()" class="k-button">Get value</button>
+                        <button click.delegate="getText()" class="k-button">Get text</button>
+                    </li>
+                </ul>
+                </div>
+                <div class="box-col">
+                <h4>Selection</h4>
+                <ul class="options">
+                    <li>
+                        <input ref="indexInput" value="0" class="k-textbox" style="width: 40px; margin: 0;" /> 
+                        <button click.delegate="setIndex(indexInput.value)" class="k-button">Select by index</button>
+                    </li>
+                    <li>
+                        <input ref="valueInput" value="1" class="k-textbox" style="width: 40px; margin: 0;" /> 
+                        <button click.delegate="setValue(valueInput.value)" class="k-button">Select by value</button>
+                    </li>
+                    <li>
+                        <input ref="wordInput" value="Pulp" class="k-textbox" style="width: 100px; margin: 0;" /> 
+                        <button click.delegate="setSearch(wordInput.value)" class="k-button">Select item starting with</button>
+                    </li>
+                </ul>
+                </div>
+            </div>
+</div>
+  <style>
+                .configuration .k-textbox {
+                    width: 40px;
+                }
+                .k-button {
+                    min-width: 80px;
+                }
+            </style>
+    </template>
