--- a/sample/src/dropdownlist/binding-to-remote-data.html
+++ b/sample/src/dropdownlist/binding-to-remote-data.html
@@ -1,2 +1,10 @@
 <template>
+    <div id="example">
+        <div class="demo-section k-content">
+            <h4>Products</h4>
+            <input au-kendo-drop-down-list="data-text-field: ProductName;
+                                            data-value-field: ProductID;
+                                            data-source.bind: dataSource" style="width: 100%" />
+        </div>
+    </div>
 </template>
