--- a/sample/src/dropdownlist/cascading-dropdownlist.html
+++ b/sample/src/dropdownlist/cascading-dropdownlist.html
@@ -1,2 +1,62 @@
 <template>
-</template>
+<div id="example">
+
+
+            <div class="demo-section k-content">
+
+                <h4>Categories:</h4>
+                <input au-kendo-drop-down-list="option-label: Select category...;
+                        data-text-field: CategoryName;
+                        data-value-field: CategoryID;
+                        data-source.bind: {
+                            type: 'odata',
+                            serverFiltering: true,
+                            transport: {
+                                read: '//demos.telerik.com/kendo-ui/service/Northwind.svc/Categories'
+                            }
+                        }" 
+                        au-kendo-drop-down-list.ref="categories" id="categories" style="width: 100%;" />
+
+                <h4 style="margin-top: 2em;">Products:</h4>
+                <input au-kendo-drop-down-list="auto-bind.bind: false;
+                        cascade-from: categories;
+                        option-label: Select product...;
+                        data-text-field: ProductName;
+                        data-value-field: ProductID;
+                        data-source.bind: {
+                            type: 'odata',
+                            serverFiltering: true,
+                            transport: {
+                                read: '//demos.telerik.com/kendo-ui/service/Northwind.svc/Products'
+                            }
+                        }" 
+                        au-kendo-drop-down-list.ref="products" id="products" disabled="disabled" style="width: 100%;" />
+
+                <h4 style="margin-top: 2em;">Orders:</h4>
+                <input au-kendo-drop-down-list="auto-bind.bind: false;
+                        cascade-from: products;
+                        option-label: Select order...;
+                        data-text-field: Order.ShipCity;
+                        data-value-field: OrderID;
+                        data-source.bind: {
+                            type: 'odata',
+                            serverFiltering: true,
+                            transport: {
+                                read: '//demos.telerik.com/kendo-ui/service/Northwind.svc/Order_Details?$expand=Order'
+                            }
+                        }" 
+                        au-kendo-drop-down-list.ref="orders" id="orders" disabled="disabled" style="width: 100%;" />
+
+                <button click.delegate="viewOrder()" class="k-button k-primary" id="get" style="margin-top: 2em; float: right;">View Order</button>
+
+            </div>
+
+            <style>
+                .k-readonly
+                {
+                    color: gray;
+                }
+            </style>
+
+        </div>
+    </template>
