--- a/sample/src/autocomplete/api.html
+++ b/sample/src/autocomplete/api.html
@@ -2,11 +2,15 @@
 
   <require from="./api.css"></require>
 
-  <p><strong>Pick a color:</strong></p>
-  <p>
-      <input au-kendo-autocomplete="data-source.bind: items;" au-kendo-autocomplete.ref="autocomplete">
-  </p>
-  <p class="text-muted">Hint: type "red"</p>
+  <div id="example">
+    <p><strong>Pick a color:</strong></p>
+    <p>
+        <input au-kendo-autocomplete="data-source.bind: items;"
+               au-kendo-autocomplete.ref="autocomplete"
+               style="width: 100%;">
+    </p>
+    <p class="text-muted">Hint: type "red"</p>
+  </div>
 
   <hr>
 
