--- a/sample/src/sample-runner.html
+++ b/sample/src/sample-runner.html
@@ -1,7 +1,9 @@
 <template>
     <section>
         <collapse-panel title.bind="sample.title">
-          <compose view-model.bind="sample.path"></compose>
+          <div id="exampleWrap">
+            <compose view-model.bind="sample.path"></compose>
+          </div>
         </collapse-panel>
         <collapse-panel title="Code Preview">
             <div au-kendo-tabstrip au-kendo-tabstrip.ref="tabstrip">
