--- a/sample/src/autocomplete/events.html
+++ b/sample/src/autocomplete/events.html
@@ -1,18 +1,23 @@
 <template>
-  <p><strong>Select a state in USA:</strong></p>
-  <p>
-      <input au-kendo-autocomplete="data-source.bind: items;"
-             kendo-open.trigger="logger.log('open')"
-             kendo-close.trigger="logger.log('close')"
-             kendo-change.trigger="logger.log('change')"
-             kendo-select.trigger="logger.log('select')"
-             kendo-data-bound.trigger="logger.log('dataBound')"
-             kendo-filtering.trigger="logger.log('filtering')">
-  </p>
-  <p class="text-muted">Hint: type "m"</p>
+  <div id="example">
+    <div class="demo-section k-content">
+      <p><strong>Select a state in USA:</strong></p>
+      <p>
+          <input au-kendo-autocomplete="data-source.bind: items;"
+                 kendo-open.trigger="logger.log('open')"
+                 kendo-close.trigger="logger.log('close')"
+                 kendo-change.trigger="logger.log('change')"
+                 kendo-select.trigger="logger.log('select')"
+                 kendo-data-bound.trigger="logger.log('dataBound')"
+                 kendo-filtering.trigger="logger.log('filtering')"
+                 style="width: 100%;">
+      </p>
+      <p class="text-muted">Hint: type "m"</p>
+    </div>
 
-  <div class="box">
-      <h4>Console log</h4>
-      <logger view-model.ref="logger"></logger>
+    <div class="box">
+        <h4>Console log</h4>
+        <logger view-model.ref="logger"></logger>
+    </div>
   </div>
 </template>
