--- a/sample/src/charts/donut-charts/basic-use.html
+++ b/sample/src/charts/donut-charts/basic-use.html
@@ -1,9 +1,13 @@
 <template>
-  <au-kendo-chart legend.bind="legend"
-                  chart-area.bind="chartArea"
-                  series-defaults.bind="seriesDefaults"
-                  series.bind="series"
-                  tooltip.bind="tooltip"
-                  style="background: center no-repeat url('http://demos.telerik.com/kendo-ui/content/shared/styles/world-map.png');">
-  </au-kendo-chart>
+  <div id="example">
+    <div class="demo-section k-content wide">
+      <au-kendo-chart legend.bind="legend"
+                      chart-area.bind="chartArea"
+                      series-defaults.bind="seriesDefaults"
+                      series.bind="series"
+                      tooltip.bind="tooltip"
+                      style="background: center no-repeat url('http://demos.telerik.com/kendo-ui/content/shared/styles/world-map.png');">
+      </au-kendo-chart>
+    </div>
+  </div>
 </template>
