--- a/sample/src/charts/donut-charts/binding-to-local-data.html
+++ b/sample/src/charts/donut-charts/binding-to-local-data.html
@@ -1,9 +1,13 @@
 <template>
-  <au-kendo-chart title.bind="{text: 'Break-up of Spain Electricity Production for 2008'}"
-                  data-source.bind="{data: hydroData}"
-                  legend.bind="legend"
-                  series.bind="series"
-                  series-colors.bind="seriesColors"
-                  tooltip.bind="tooltip">
-  </au-kendo-chart>
+  <div id="example">
+    <div class="demo-section k-content wide">
+      <au-kendo-chart title.bind="{text: 'Break-up of Spain Electricity Production for 2008'}"
+                      data-source.bind="{data: hydroData}"
+                      legend.bind="legend"
+                      series.bind="series"
+                      series-colors.bind="seriesColors"
+                      tooltip.bind="tooltip">
+      </au-kendo-chart>
+    </div>
+  </div>
 </template>
