--- a/sample/src/charts/donut-charts/binding-to-remote-data.html
+++ b/sample/src/charts/donut-charts/binding-to-remote-data.html
@@ -1,11 +1,15 @@
 <template>
-  <au-kendo-chart title.bind="title"
-                  data-source.bind="datasource"
-                  legend.bind="legend"
-                  series-defaults.bind="seriesDefaults"
-                  series.bind="series"
-                  value-axis.bind="valueAxis"
-                  category-axis.bind="categoryAxis"
-                  tooltip.bind="tooltip">
-  </au-kendo-chart>
+  <div id="example">
+    <div class="demo-section k-content wide">
+      <au-kendo-chart title.bind="title"
+                      data-source.bind="datasource"
+                      legend.bind="legend"
+                      series-defaults.bind="seriesDefaults"
+                      series.bind="series"
+                      value-axis.bind="valueAxis"
+                      category-axis.bind="categoryAxis"
+                      tooltip.bind="tooltip">
+      </au-kendo-chart>
+    </div>
+  </div>
 </template>
